demo 重构