@@ -3,19 +3,20 @@ package com.fastjrun.demo.service.impl;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
 import com.fastjrun.common.ServiceException;
 import com.fastjrun.dao.CommonDao;
-import com.fastjrun.demo.bean.User;
-import com.fastjrun.demo.bean.UserLogin;
-import com.fastjrun.demo.dao.BaseUserDao;
-import com.fastjrun.demo.dao.BaseUserLoginDao;
+import com.fastjrun.demo.entity.User;
+import com.fastjrun.demo.entity.UserExample;
+import com.fastjrun.demo.entity.UserExample.Criteria;
+import com.fastjrun.demo.entity.UserLogin;
+import com.fastjrun.demo.entity.UserLoginExample;
+import com.fastjrun.demo.mapper.UserLoginMapper;
+import com.fastjrun.demo.mapper.UserMapper;
 import com.fastjrun.demo.service.CoreUserService;
 import com.fastjrun.helper.Check;
 import com.fastjrun.helper.TimeHelper;
@@ -25,11 +26,9 @@ import com.fastjrun.service.impl.BaseService;
 @Service
 public class CoreUserServiceImpl extends BaseService implements CoreUserService {
     @Autowired
-    private RedisTemplate<String, User> redisTemplate;
+    private UserMapper userMapper;
     @Autowired
-    private BaseUserDao baseUserDao;
-    @Autowired
-    private BaseUserLoginDao baseUserLoginDao;
+    private UserLoginMapper userLoginMapper;
     @Autowired
     private CommonDao commonDao;
 
@@ -37,71 +36,103 @@ public class CoreUserServiceImpl extends BaseService implements CoreUserService 
     private int invalidDays = 30;
 
     @Value("${userService.errLimits}")
-    private int errLimits = 5;
+    private short errLimits = (short) 5;
 
     @Value("${userService.clearPwdLockErrIntervalInHours}")
     private int clearPwdLockErrIntervalInHours = 2;
 
-    @Override
-    public void checkLoign(String userKey) {
-        if (!redisTemplate.hasKey(userKey)) {
-            throw new ServiceException("checkLogin01", "用户未登录");
-        }
+    private final static String USER_NOT_LOGON = "0002";
 
+    private final static String LOGIN_CREDENTIAL_INVALID = "0003";
+
+    private final static String USER_LOCKED = "0004";
+
+    private final static String PWDERR_INPUT_EXCEED_LIMIT = "0005";
+
+    private final static String PWDERR_INPUT_REMAIN = "0006";
+
+    private final static String PWDERR_WARNNING = "0007";
+
+    @Override
+    public void checkLoign(String uuid, String deviceId) {
+        UserLoginExample example = new UserLoginExample();
+        com.fastjrun.demo.entity.UserLoginExample.Criteria criteria = example
+                .createCriteria();
+        criteria.andLogincredentialEqualTo(uuid);
+        criteria.andDeviceidEqualTo(deviceId);
+        criteria.andStatusEqualTo("1");
+
+        List<UserLogin> userLogins = userLoginMapper.selectByExample(example);
+        if (!Check.isEmpty(userLogins) && userLogins.size() > 0) {
+            throw new ServiceException(USER_NOT_LOGON,
+                    this.serviceMessageSource.getMessage(USER_NOT_LOGON, null,
+                            null));
+        }
     }
 
     @Override
     public User login(String loginName, String loginPwd, String deviceId,
             String uuid) {
-        StringBuilder c = new StringBuilder();
-        c.append("and loginName='").append(loginName).append("'");
-        c.append(" and loginPwd='").append(loginPwd).append("'");
-        c.append(" and status='1' and loginErrCount<5");
-        List<User> users = baseUserDao.queryForListCondition(c.toString());
+        UserExample example = new UserExample();
+        Criteria criteria = example.createCriteria();
+        criteria.andLoginnameEqualTo(loginName);
+        criteria.andLoginpwdEqualTo(loginPwd);
+        criteria.andStatusEqualTo("1");
+        criteria.andLoginerrcountLessThan(Short.valueOf((short) 5));
+        List<User> users = userMapper.selectByExample(example);
         if (!Check.isEmpty(users) && users.size() > 0) {
             User user = users.get(0);
             String curTime = TimeHelper.getCurrentTime(TimeHelper.DF17);
-            user.setLastLoginTime(curTime);
-            user.setLastRecordLoginErrTime(null);
-            user.setLoginErrCount(new Integer(0));
-            baseUserDao.updateById(user);
+            user.setLastlogintime(curTime);
+            user.setLastrecordloginerrtime(null);
+            user.setLoginerrcount(Short.valueOf((short) 0));
+            userMapper.updateByPrimaryKey(user);
             this.auditLogin(user.getId(), deviceId, uuid);
-            this.setRedisUser(user, uuid, deviceId);
             return user;
         } else {
-            c = new StringBuilder();
-            c.append("and loginName='").append(loginName).append("'");
-            List<User> userWithLoginNames = baseUserDao.queryForListCondition(c.toString());
+            example = new UserExample();
+            criteria = example.createCriteria();
+            criteria.andLoginnameEqualTo(loginName);
+            List<User> userWithLoginNames = userMapper.selectByExample(example);
             if (!Check.isEmpty(userWithLoginNames)
                     && userWithLoginNames.size() > 0) {
                 User user = userWithLoginNames.get(0);
                 String curTime = TimeHelper.getCurrentTime(TimeHelper.DF17);
-                user.setLastRecordLoginErrTime(curTime);
+                user.setLastrecordloginerrtime(curTime);
                 final String status = user.getStatus();
                 if (!"1".equals(status)) {
                     log.warn(loginName
                             + " login error for lock reason status: " + status);
-                    throw new ServiceException("USERLOGIN02", "用户已被锁定" + status);
+                    throw new ServiceException(USER_LOCKED,
+                            this.serviceMessageSource.getMessage(USER_LOCKED,
+                                    new Object[] { status }, null));
                 }
-                int loginErrCount = user.getLoginErrCount();
-                user.setLoginErrCount(++loginErrCount);
+                short loginErrCount = user.getLoginerrcount().shortValue();
+                user.setLoginerrcount(Short.valueOf((short) (++loginErrCount)));
                 log.warn(loginName + " login error counts: " + loginErrCount);
-                String errCode = "";
-                String errMsg = "";
                 if (loginErrCount >= this.errLimits) {
                     user.setStatus("2");
-                    errCode = "USERLOGIN03";
-                    errMsg = "用户名或密码错误输入错误已打上限，请隔"
-                            + clearPwdLockErrIntervalInHours + "小时再试";
+                    userMapper.updateByPrimaryKey(user);
+                    throw new ServiceException(
+                            PWDERR_INPUT_EXCEED_LIMIT,
+                            this.serviceMessageSource
+                                    .getMessage(
+                                            PWDERR_INPUT_EXCEED_LIMIT,
+                                            new Object[] { clearPwdLockErrIntervalInHours },
+                                            null));
                 } else {
-                    errCode = "USERLOGIN04";
-                    errMsg = "用户名或密码错误，还剩下" + (this.errLimits - loginErrCount)
-                            + "次机会";
+                    userMapper.updateByPrimaryKey(user);
+                    throw new ServiceException(PWDERR_INPUT_REMAIN,
+                            this.serviceMessageSource.getMessage(
+                                    PWDERR_INPUT_REMAIN,
+                                    new Object[] { this.errLimits
+                                            - loginErrCount }, null));
                 }
-                baseUserDao.updateById(user);
-                throw new ServiceException(errCode, errMsg);
+
             } else {
-                throw new ServiceException("USERLOGIN01", "用户名或密码错误");
+                throw new ServiceException(PWDERR_WARNNING,
+                        this.serviceMessageSource.getMessage(PWDERR_WARNNING,
+                                null, null));
             }
         }
     }
@@ -113,56 +144,34 @@ public class CoreUserServiceImpl extends BaseService implements CoreUserService 
         String inValidateTime = TimeHelper.getFormatDate(inValidateDate,
                 TimeHelper.DF17);
         UserLogin userLogin = new UserLogin();
-        userLogin.setUserId(userId);
-        userLogin.setCreateTime(createTime);
-        userLogin.setInValidateTime(inValidateTime);
-        userLogin.setLoginCredential(uuid);
-        userLogin.setDeviceId(deviceId);
+        userLogin.setUserid(userId);
+        userLogin.setCreatetime(createTime);
+        userLogin.setInvalidatetime(inValidateTime);
+        userLogin.setLogincredential(uuid);
+        userLogin.setDeviceid(deviceId);
         userLogin.setStatus("1");
-        baseUserLoginDao.insert(userLogin);
+        userLoginMapper.insert(userLogin);
 
     }
 
     @Override
     public void logOut(String uuid, String deviceId) {
         String key = getLoginToken(uuid, deviceId);
-        if (redisTemplate.hasKey(key)) {
-            redisTemplate.delete(key);
-        }
-        StringBuilder c = new StringBuilder();
-        c.append("and loginCredential='").append(uuid).append("'");
-        c.append(" and deviceId='").append(deviceId).append("'");
-        List<UserLogin> userLogins = baseUserLoginDao.queryForListCondition(c.toString());
+
+        UserLoginExample example = new UserLoginExample();
+        com.fastjrun.demo.entity.UserLoginExample.Criteria criteria = example
+                .createCriteria();
+        criteria.andLogincredentialEqualTo(uuid);
+        criteria.andDeviceidEqualTo(deviceId);
+
+        List<UserLogin> userLogins = userLoginMapper.selectByExample(example);
         if (!Check.isEmpty(userLogins) && userLogins.size() > 0) {
             UserLogin userLogin = userLogins.get(0);
             String logOutTime = TimeHelper.getCurrentTime(TimeHelper.DF17);
-            userLogin.setLogOutTime(logOutTime);
+            userLogin.setLogouttime(logOutTime);
             userLogin.setStatus("2");
-            baseUserLoginDao.updateById(userLogin);
+            userLoginMapper.updateByPrimaryKey(userLogin);
         }
-
-    }
-
-    @Override
-    public User getRedisUser(String uuid, String deviceId) {
-        String key = getLoginToken(uuid, deviceId);
-        if (redisTemplate.hasKey(key)) {
-            Object value = redisTemplate.opsForValue().get(key);
-            return (User) value;
-        } else
-            return null;
-    }
-
-    @Override
-    public void setRedisUser(User user, String uuid, String deviceId) {
-        String key = getLoginToken(uuid, deviceId);
-        if (redisTemplate.hasKey(key)) {
-            redisTemplate.delete(key);
-        }
-        redisTemplate.opsForValue().set(key, user);
-        Boolean expire = redisTemplate.expire(key,
-                24 * this.invalidDays * 60 * 60, TimeUnit.SECONDS);
-        log.debug(expire);
 
     }
 
@@ -172,26 +181,31 @@ public class CoreUserServiceImpl extends BaseService implements CoreUserService 
 
     @Override
     public User autoLogin(String deviceId, String uuidOld, String uuidNew) {
-        StringBuilder c = new StringBuilder();
-        c.append("and loginCredential='").append(uuidOld).append("'");
-        c.append("and status = '1'");
-        c.append(" and deviceId='").append(deviceId).append("'");
-        List<UserLogin> userLogins = baseUserLoginDao.queryForListCondition(c.toString());
+
+        UserLoginExample example = new UserLoginExample();
+        com.fastjrun.demo.entity.UserLoginExample.Criteria criteria = example
+                .createCriteria();
+        criteria.andLogincredentialEqualTo(uuidOld);
+        criteria.andStatusEqualTo("1");
+        criteria.andDeviceidEqualTo(deviceId);
+
+        List<UserLogin> userLogins = userLoginMapper.selectByExample(example);
         if (!Check.isEmpty(userLogins) && userLogins.size() > 0) {
             UserLogin userLogin = userLogins.get(0);
-            User user = baseUserDao.selectById(userLogin.getUserId());
+            User user = userMapper.selectByPrimaryKey(userLogin.getUserid());
             String curTime = TimeHelper.getCurrentTime(TimeHelper.DF17);
-            user.setLastLoginTime(curTime);
-            user.setLastRecordLoginErrTime(null);
-            user.setLoginErrCount(new Integer(0));
-            baseUserDao.updateById(user);
+            user.setLastlogintime(curTime);
+            user.setLastrecordloginerrtime(null);
+            user.setLoginerrcount(Short.valueOf((short) 0));
+            userMapper.updateByPrimaryKey(user);
             this.logOut(uuidOld, deviceId);
             this.auditLogin(user.getId(), deviceId, uuidNew);
-            this.setRedisUser(user, uuidNew, deviceId);
             return user;
         }
         log.warn(" login error for invalid uuid：" + uuidOld);
-        throw new ServiceException("USERAUTOLOGIN01", "用户登录凭证已经失效，请重新登录");
+        throw new ServiceException(LOGIN_CREDENTIAL_INVALID,
+                this.serviceMessageSource.getMessage(LOGIN_CREDENTIAL_INVALID,
+                        null, null));
     }
 
     @Override
@@ -209,7 +223,7 @@ public class CoreUserServiceImpl extends BaseService implements CoreUserService 
         String invalidDateStr = TimeHelper.getFormatDate(invalidDate,
                 TimeHelper.DF17);
         String sql = "update  t_user_login set status ='2' where inValidateTime>='"
-                + invalidDateStr + "'";
+                + invalidDateStr + "' and status='1'";
         int res = commonDao.update(new Declare(sql));
         log.debug(res);
 
